--- a/src/App.css
+++ b/src/App.css
@@ -174,6 +174,9 @@
     padding: 0px !important;
   }
 }
+.most_main_grid_auth .MuiTabs-indicator {
+  display: none;
+}
 
 @media only screen and (max-width: 500px) {
   .cenetr_prfl_grid {
@@ -203,6 +206,49 @@
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.MuiSwitch-track {
+  background-color: gray !important;
+  opacity: 1 !important;
+}
+
+.MuiSwitch-colorPrimary.Mui-checked + .MuiSwitch-track {
+  background-color: #1ed660 !important;
+}
+
+.jFXjlY svg {
+  font-size: 20px !important;
+}
+@media only screen and (max-width: 599px) {
+  .audioIConsOnSmall {
+    display: block !important;
+    margin-left: 0px !important;
+  }
+  .nowHudioIConsOnSmall {
+    display: none;
+  }
+  .sliderPlusPlayIcons {
+    display: flex;
+    justify-content: space-between;
+  }
+  .wrapAudioIConsOnSmall {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+  }
+  .audioInnerDivIons1 {
+    display: flex;
+  }
+  .setInnerRepIconMargin {
+    padding-left: 30px;
+  }
+  .volUpIcons_audioComp_main_div {
+    display: flex;
+  }
+  .crossIcon_audio_comp_div {
+    padding-left: 30px !important;
+  }
 }
 
 .MuiChip-root.active {
