pointer on icons

--- a/src/App.css
+++ b/src/App.css
@@ -379,6 +379,14 @@
   left: -21px;
 }
 
+.MuiSvgIcon-root {
+  cursor: pointer;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
 /* .ribbon span::before {
   content: "";
   position: absolute;
